--- a/package.json
+++ b/package.json
@@ -1,7 +1,28 @@
 {
-  "name": "my-storybook",
+  "name": "sna-my-storybook-components",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "licence": "MIT",
+  "typings": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "homepage": "",
+  "repository": {
+    "url": "https://github.com/Senicalm/sb-components",
+    "type": "git"
+  },
+  "peerDependencies": {
+    "react": ">=16",
+    "typescript": ">=4.0.0"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,17 +32,19 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "http-server": "^14.1.1",
-    "react": "^18.2.0",
+    "react": ">=16",
     "react-dom": "^18.2.0",
-    "typescript": "^4.9.5",
+    "typescript": ">=4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "start-storybook -p 6006",
-    "build": "build-storybook",
+    "build": "npm run clean && tsc && npm run copy-files",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=eceaaecfd97c"
+    "chromatic": "npx chromatic --project-token=eceaaecfd97c",
+    "clean": "rimraf dist/",
+    "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
   "eslintConfig": {
     "extends": [
@@ -52,8 +75,19 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.3.0",
-    "chromatic": "^6.17.0"
+    "chromatic": "^6.17.0",
+    "copyfiles": "^2.4.1",
+    "rimraf": "^4.1.2",
+    "semantic-release": "^20.1.0"
   },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+],
   "readme": "ERROR: No README data found!",
   "_id": "my-storybook@0.1.0"
 }
