--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
           node-version: 14.17
 
       - name: Install Dependencies
-        run: yarn install
+        run: npm run install
 
       - name: Build App
-        run: yarn build
+        run: npm run build
 
       - name: Semantic Release
         env:
